--- a/trunk/ pi-webserver/htdocs/style.css
+++ b/trunk/ pi-webserver/htdocs/style.css
@@ -1,154 +1,428 @@
 /*
  * vim:ts=2:sw=2:et:ai
  */
-
 body {
-  font: 13px Arial; margin: 0.5em 1em;
+	font: 13px Arial;
+	margin: 0.5em 1em;
 }
 
 #logo {
-  background: url('logo.png') no-repeat ;
-  width: 160px;
-  height: 40px;
-  float: left;
+	background: url('logo.png') no-repeat;
+	width: 160px;
+	height: 40px;
+	float: left;
 }
 
 td {
-  text-align: left;
+	text-align: left;
 }
 
 #motd {
-  margin-left: 170px;
+	margin-left: 170px;
 }
 
 .infobox {
-  background: #eed;
-  padding: 1px 1em;
+	background: #eed;
+	padding: 1px 1em;
 }
 
 .help-message {
-  color: #aaa;
+	color: #aaa;
 }
 
 #middle {
-  margin: 0.5em 0;
+	margin: 0.5em 0;
 }
 
 #error {
-  background: #c44;
-  color: white;
-  font-weight: bold;
+	background: #c44;
+	color: white;
+	font-weight: bold;
 }
 
 #content, .menu-item-selected, .chat-title, .chat-content {
-  background: #c3d9ff;
+	background: #c3d9ff;
 }
 
 #content {
-  overflow: hidden;
-  min-height: 7em;
-  padding: 1em;
+	overflow: hidden;
+	min-height: 7em;
+	padding: 1em;
 }
 
 .chat-title {
-  padding: 1px 1ex;
+	padding: 1px 1ex;
 }
 
 .chat-content {
- padding: 1ex;
+	padding: 1ex;
 }
 
 .chat-window {
+
 }
 
 .message-row {
-  margin: 2px;
-  border-bottom: 1px solid #bbb;
+	margin: 2px;
+	border-bottom: 1px solid #bbb;
 }
 
 .message-timestamp {
-  color: #484;
+	color: #484;
 }
 
 .message-user {
-  margin-left: 0.5em;
-  font-weight: bold;
+	margin-left: 0.5em;
+	font-weight: bold;
 }
 
 .message-text {
-  margin-left: 0.5em;
+	margin-left: 0.5em;
 }
 
 .message-user-server {
-  color: purple;
+	color: purple;
 }
 
 .message-text-server {
-  font-style: italic;
+	font-style: italic;
 }
 
 .main {
-  padding: 0.5em;
-  background: #f0fcff;
+	padding: 0.5em;
+	background: #f0fcff;
 }
 
 #menu {
-  margin-top: 1em;
-  min-width: 7em;
-  float: left;
+	margin-top: 1em;
+	min-width: 7em;
+	float: left;
 }
 
 #footer {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  color: #ccc;
-  padding: 0.5em;
+	/* position: fixed; */
+	bottom: 0;
+	right: 0;
+	color: #ccc;
+	padding: 0.5em;
 }
 
 .section {
-  clear: both;
+	clear: both;
 }
 
 .hidden {
-  display: none;
+	display: none;
 }
 
 .menu-item {
-  cursor: pointer;
-  padding: 0.1em 0.5em;
+	cursor: pointer;
+	padding: 0.1em 0.5em;
 }
 
 .menu-item-selected {
-  font-weight: bold;
+	font-weight: bold;
 }
 
 .message-list {
-  min-height: 1em;
-  background: white;
-  margin: 0.5em 0;
+	min-height: 1em;
+	background: white;
+	margin: 0.5em 0;
 }
 
 .rounded {
-  border-radius: 6px;
-  -moz-border-radius: 6px;
-  -webkit-border-radius: 6px;
+	border-radius: 6px;
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
 }
 
 .left-rounded {
-  border-radius: 6px 0 0 6px;
-  -moz-border-radius: 6px 0 0 6px;
-  -webkit-border-radius: 6px 0 0 6px;
+	border-radius: 6px 0 0 6px;
+	-moz-border-radius: 6px 0 0 6px;
+	-webkit-border-radius: 6px 0 0 6px;
 }
 
 .bottom-rounded {
-  border-radius: 0 0 6px 6px;
-  -moz-border-radius: 0 0 6px 6px;
-  -webkit-border-radius: 0 0 6px 6px;
+	border-radius: 0 0 6px 6px;
+	-moz-border-radius: 0 0 6px 6px;
+	-webkit-border-radius: 0 0 6px 6px;
 }
 
 .top-rounded {
-  border-radius: 6px 6px 0 0;
-  -moz-border-radius: 6px 6px 0 0;
-  -webkit-border-radius: 6px 6px 0 0;
+	border-radius: 6px 6px 0 0;
+	-moz-border-radius: 6px 6px 0 0;
+	-webkit-border-radius: 6px 6px 0 0;
+}
+
+/***************** begin ******************/
+
+body {
+	margin: 0;
+	padding: 0;
+	line-height: 1.5em;
+}
+
+b {
+	font-size: 210%;
+}
+
+em {
+	color: red;
+}
+
+#topsection {
+	background: #EAEAEA;
+	height: 90px; /*Height of top section*/
+}
+
+#topsection h1 {
+	margin: 0;
+	padding-top: 15px;
+}
+
+#contentwrapper {
+	float: left;
+	width: 100%;
+}
+
+#contentcolumn {
+	margin: 0 15% 0 20%;
+	/*Margins for content column. Should be "0 RightColumnWidth 0 LeftColumnWidth*/
+	text-align:center;
+}
+
+#leftcolumn {
+	float: left;
+	width: 20%; /*Width of left column in percentage*/
+	margin-left: -100%;
+	background: #C8FC98;
+	min-height:700px;
+}
+
+#rightcolumn {
+	float: left;
+	width: 15%; /*Width of right column in pixels*/
+	margin-left: -15%; /*Set margin to that of -(RightColumnWidth)*/
+	background: #FDE95E;
+	min-height:700px;
+}
+
+#footer {
+	clear: left;
+	width: 100%;
+	background: black;
+	color: #FFF;
+	text-align: center;
+	padding: 4px 0;
+}
+
+#footer a {
+	color: #FFFF80;
+}
+
+.innertube {
+	margin: 10px;
+	/*Margins for inner DIV inside each column (to provide padding)*/
+	margin-top: 0;
+	text-align: center;
+}
+
+#content_table_wrapper {
+	position: relative;
+	margin-top:60px;
+}
+
+.rele_table_row {
+	position: relative;
+	float: left;
+	width: 100%;
+	display: inline-block;
+	text-align: center;
+}
+
+.rele_table_column_1_right {
+	/*
+	 display: inline;
+	 position: absolute;
+	 right: 50%;
+	 top: 0;
+	 */
+	position: relative;
+	display: inline-block;
+	margin-right: 0;
+	margin-left: 0;
+	min-width: 0%;
+}
+
+.rele_table_column_1_middle {
+	/*
+	 display: inline;
+	 position: absolute;
+	 left: 50%;
+	 top: 43%;
+	 margin-left: -15%;
+	 font-weight: bold;
+	 color: #4E4A54;
+	 letter-spacing: 0pt;
+	 word-spacing: 9pt;
+	 font-size: 34px;
+	 text-align: left;
+	 font-family: palatino linotype, palatino, serif;
+	 line-height: 1;
+	 */
+	position: relative;
+	display: inline-block;
+	margin-right: 0;
+	margin-left: 0;
+	min-width: 0%;
+}
+
+.rele_table_column_1_left {
+	/*
+	 display: inline;
+	 position: absolute;
+	 left: 50%;
+	 top: 45%;
+	 margin-left: -25%;
+	 font-weight: normal;
+	 color: #4E4A54;
+	 letter-spacing: 0pt;
+	 word-spacing: 9pt;
+	 font-size: 31px;
+	 text-align: left;
+	 font-family: palatino linotype, palatino, serif;
+	 line-height: 1;
+	 */
+	position: relative;
+	display: inline-block;
+	margin-right: 0;
+	margin-left: 0;
+	min-width: 2%;
+}
+.rele_table_column_2_right {
+	/*
+	 display: inline;
+	 position: absolute;
+	 left: 50%;
+	 top: 0;
+	 */
+	position: relative;
+	display: inline-block;
+	margin-right: 0;
+	margin-left: 0;
+	min-width: 2%;
+}
+
+.rele_table_column_2_middle {
+	/*
+	 display: inline;
+	 position: absolute;
+	 left: 50%;
+	 top: 43%;
+	 margin-left: 25%;
+	 font-weight: bold;
+	 color: #4E4A54;
+	 letter-spacing: 0pt;
+	 word-spacing: 9pt;
+	 font-size: 34px;
+	 text-align: left;
+	 font-family: palatino linotype, palatino, serif;
+	 line-height: 1;
+	 */
+	position: relative;
+	display: inline-block;
+	margin-right: 0;
+	margin-left: 0;
+	min-width: 0%;
+}
+
+.rele_table_column_2_left {
+	/*
+	 display: inline;
+	 position: absolute;
+	 left: 50%;
+	 top: 45%;
+	 margin-left:15%;
+	 font-weight: normal;
+	 color: #4E4A54;
+	 letter-spacing: 0pt;
+	 word-spacing: 9pt;
+	 font-size: 31px;
+	 text-align: left;
+	 font-family: palatino linotype, palatino, serif;
+	 line-height: 1;
+	 */
+	position: relative;
+	display: inline-block;
+	margin-right: 0;
+	margin-left: 0;
+	min-width: 0%;
+}
+.input_table_row {
+	position: relative;
+	float: left;
+	width: 100%;
+	display: inline-block;
+	height: 100px;
+	text-align: center;
+}
+
+.input_table_col_el {
+	display: block;
+	overflow: hidden;
+	font-weight: bold;
+	color: #4E4A54;
+	letter-spacing: 0pt;
+	word-spacing: 9pt;
+	font-size: 34px;
+	text-align: left;
+	font-family: palatino linotype, palatino, serif;
+	line-height: 1;
+	text-align:center;
+	
+}
+.input_table_col {
+	position: relative;
+	display: inline;
+	float: left;
+	margin: 0 auto;
+	width: auto;
+	min-width: 12.5%;
+	max-width: 12.5%;
+}
+
+.rele_table_col {
+	position: relative;
+	display: inline;
+	float: left;
+	margin: 0 auto;
+	width: auto;
+	min-width: 25%;
+	max-width: 25%;
+}
+
+.rele_table_col_el {
+	display: block;
+	height: 100px;
+}
+
+.namerel {
+	position: relative;
+	display: inline;
+	top: 50%;
+	font-size: 31px;
+}
+
+.rele_num {
+	font-weight: bold;
+	color: #4E4A54;
+	letter-spacing: 0pt;
+	word-spacing: 9pt;
+	font-size: 34px;
+	text-align: left;
+	font-family: palatino linotype, palatino, serif;
+	line-height: 1;
+}
+#input_header{
+	margin-top:40px;
 }
