--- a/trunk/ pi-webserver/htdocs/style.css
+++ b/trunk/ pi-webserver/htdocs/style.css
@@ -426,3 +426,12 @@ em {
 #input_header{
 	margin-top:40px;
 }
+
+.marker{
+	height:40px;
+	font-weight: bold;
+	color:#000000;
+	letter-spacing: 0pt;
+	word-spacing: 9pt;
+	font-size: 34px;
+}
